# opyration

./: .py  CHANGES.md  README.md  pyproject.toml
opyration/: __init__.py  interfaces.py  operation.py  results.py  symbols.py  transaction.py
tests/: test_lookup.py  test_operation.py
