[tool.poetry]
name = "opyration"
version = "0.1.1"
description = "Execute SQL Statements as a series of pythonic functions."
authors = ["Raymond Ortserga <ortserga@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"


[tool.poetry.dev-dependencies]
asyncpg= "^0.29.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
